added home link to start exploring button

--- a/cart/templates/checkout_success.html
+++ b/cart/templates/checkout_success.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Bootstrap Elegant Success Modal</title>
+<title>order success</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -119,7 +119,7 @@ $(document).ready(function(){
 			<div class="modal-body text-center">
 				<h4>Great!</h4>	
 				<p>Your Order has been Placed successfully.</p>
-				<button class="btn btn-success" data-dismiss="modal"><span>Start Exploring</span> <i class="material-icons">&#xE5C8;</i></button>
+				<a href="{% url 'home' %}" class="btn btn-success"><span>Start Exploring</span> <i class="material-icons">&#xE5C8;</i></a>
 			</div>
 		</div>
 	</div>
