mobile menu disappear error fixed

--- a/cart/templates/checkout.html
+++ b/cart/templates/checkout.html
@@ -106,6 +106,7 @@
                                 </li>
                             </ul>
                         </nav>
+						<div class="mobile-menu"></div>
                         <!-- menu end -->
                     </div>
                 </div>
