--- a/templates/contact.html
+++ b/templates/contact.html
@@ -144,6 +144,7 @@
                                 </li>
                             </ul>
                         </nav>
+                        <div class="mobile-menu"></div>
                         <!-- menu end -->
                     </div>
                 </div>
