--- a/customer/templates/login.html
+++ b/customer/templates/login.html
@@ -107,6 +107,7 @@
 								</li>
 							</ul>
 						</nav>
+						<div class="mobile-menu"></div>
 						<!-- menu end -->
 					</div>
 				</div>
