--- a/templates/index.html
+++ b/templates/index.html
@@ -117,6 +117,7 @@
                                 </li>
                             </ul>
                         </nav>
+                        <div class="mobile-menu"></div>
                         <!-- menu end -->
                     </div>
                 </div>
