--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -71,13 +71,22 @@
                                     <div class="header-icons">
                                         <a class="shopping-cart" href="{% url 'cart' %}">
                                             <i class="fas fa-shopping-cart"></i>
+                                            
                                             {% if user.is_authenticated %}
-                                            {% with cart=user.cart %}
-                                            <span class="cart-count">{{ cart.items.count }}</span>
-                                            {% endwith %}
+                                                {% with cart=user.cart %}
+                                                    <span class="cart-count">{{ cart.items.count }}</span>
+                                                {% endwith %}
+                                            {% else %}
+                                                {% with session_cart=request.session.cart %}
+                                                    {% if session_cart %}
+                                                        <span class="cart-count">{{ session_cart|length }}</span>
+                                                    {% else %}
+                                                        <span class="cart-count">0</span>
+                                                    {% endif %}
+                                                {% endwith %}
                                             {% endif %}
                                         </a>
-                                    </div>
+                                    </div> 
                                 </li>
                                 <li>
                                     <div class="header-icons">
