--- a/products/templates/shop.html
+++ b/products/templates/shop.html
@@ -73,13 +73,22 @@
                                     <div class="header-icons">
                                         <a class="shopping-cart" href="{% url 'cart' %}">
                                             <i class="fas fa-shopping-cart"></i>
+                                            
                                             {% if user.is_authenticated %}
-                                            {% with cart=user.cart %}
-                                            <span class="cart-count">{{ cart.items.count }}</span>
-                                            {% endwith %}
+                                                {% with cart=user.cart %}
+                                                    <span class="cart-count">{{ cart.items.count }}</span>
+                                                {% endwith %}
+                                            {% else %}
+                                                {% with session_cart=request.session.cart %}
+                                                    {% if session_cart %}
+                                                        <span class="cart-count">{{ session_cart|length }}</span>
+                                                    {% else %}
+                                                        <span class="cart-count">0</span>
+                                                    {% endif %}
+                                                {% endwith %}
                                             {% endif %}
                                         </a>
-                                    </div>
+                                    </div> 
                                 </li>
                                 <li>
                                     <div class="header-icons">
@@ -141,90 +150,28 @@
                     <div class="product-filters">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".strawberry">Strawberry</li>
-                            <li data-filter=".berry">Berry</li>
-                            <li data-filter=".lemon">Lemon</li>
+                            {% for category in category %}
+                                <li data-filter=".{{ category.slug }}">{{ category.category_name }}</li>
+                            {% endfor %}
                         </ul>
                     </div>
+                    
                 </div>
             </div>
 
 			<div class="row product-lists">
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-1.jpg" %}" alt=""></a>
-						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center berry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-2.jpg" %}" alt=""></a>
-						</div>
-						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center lemon">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-3.jpg" %}" alt=""></a>
-						</div>
-						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-4.jpg" %}" alt=""></a>
-						</div>
-						<h3>Avocado</h3>
-						<p class="product-price"><span>Per Kg</span> 50$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-5.jpg" %}" alt=""></a>
-						</div>
-						<h3>Green Apple</h3>
-						<p class="product-price"><span>Per Kg</span> 45$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="{% static "assets/img/products/product-img-6.jpg" %}" alt=""></a>
-						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 80$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="pagination-wrap">
-						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
-							<li><a class="active" href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">Next</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
+                {% for pdc in  data %}
+                    <div class="col-lg-4 col-md-6 text-center {{ pdc.category.slug }}">
+                        <div class="single-product-item">
+                            <div class="product-image">
+                                <a href="single-product.html"><img src="{{pdc.image.url}}" alt=""></a>
+                            </div>
+                            <h3>{{pdc.title}}</h3>
+                            <p class="product-price"><span>Per Kg</span> {{pdc.price}}$ </p>
+                            <a href="{% url "add_to_cart" pdc.id%}?next={{ request.path }}" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+                        </div>
+                    </div>
+                {% endfor %}
 		</div>
 	</div>
 	<!-- end products -->
