added dynamic navbar item

--- a/templates/about.html
+++ b/templates/about.html
@@ -62,11 +62,10 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="{% url 'home' %}">Home</a></li>
-								<li><a href="{% url 'about' %}">About</a></li>
-								<li><a href="{% url 'contact' %}">Contact</a></li>
-								<li><a href="{% url 'shop' %}">Shop</a>
-								</li>
+								<li class="{% if request.path == '/' %}current-list-item{% endif %}"><a href="{% url 'home' %}">Home</a></li>
+                                <li class="{% if request.path == '/about/' %}current-list-item{% endif %}"><a href="{% url 'about' %}">About</a></li>
+                                <li class="{% if request.path == '/contact/' %}current-list-item{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
+                                <li class="{% if request.path == '/shop/' %}current-list-item{% endif %}"><a href="{% url 'shop' %}">Shop</a></li>
 								<li>
 									<div class="header-icons">
                                         <a class="shopping-cart" href="{% url 'cart' %}">
@@ -145,7 +144,7 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="featured-text">
-						<h2 class="pb-3">Why <span class="orange-text">Food Talash BD</span></h2>
+						<h2 class="pb-3">Why <span class="orange-text">Nawabi Mart</span></h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
