--- a/customer/templates/register.html
+++ b/customer/templates/register.html
@@ -62,11 +62,10 @@
                         <!-- menu start -->
                         <nav class="main-menu">
                             <ul>
-                                <li class="current-list-item"><a href="{% url 'home' %}">Home</a></li>
-                                <li><a href="{% url 'about' %}">About</a></li>
-                                <li><a href="{% url 'contact' %}">Contact</a></li>
-                                <li><a href="{% url 'shop' %}">Shop</a>
-                                </li>
+                                <li class="{% if request.path == '/' %}current-list-item{% endif %}"><a href="{% url 'home' %}">Home</a></li>
+                                <li class="{% if request.path == '/about/' %}current-list-item{% endif %}"><a href="{% url 'about' %}">About</a></li>
+                                <li class="{% if request.path == '/contact/' %}current-list-item{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
+                                <li class="{% if request.path == '/shop/' %}current-list-item{% endif %}"><a href="{% url 'shop' %}">Shop</a></li>
                                 <li>
                                     <div class="header-icons">
                                         <a class="shopping-cart" href="{% url 'cart' %}">
