product details view and payment method added

--- a/products/templates/payment_success.html
+++ b/products/templates/payment_success.html
@@ -117,9 +117,9 @@ $(document).ready(function(){
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
 			<div class="modal-body text-center">
-				<h4>Great!</h4>	
-				<p>Your Order has been Confirm successfully.</p>
-				<a href="{% url 'home' %}" class="btn btn-success"><span>Start Exploring</span> <i class="material-icons">&#xE5C8;</i></a>
+				<h4>Thank You!</h4>	
+				<p>We just recieved you payment.</p>
+				<a href="{% url 'checkout_success' %}" class="btn btn-success"><span>Confirm Order</span> <i class="material-icons">&#xE5C8;</i></a>
 			</div>
 		</div>
 	</div>
