--- a/products/templates/product-details.html
+++ b/products/templates/product-details.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+        content="Responsive food talash bd, Created by Hasib Hasan/">
 
     <!-- title -->
-    <title>Checkout</title>
+    <title>Nawabi Mart</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'assets/img/Nawabii.png' %}">
@@ -34,19 +34,21 @@
     <!-- responsive -->
     <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 </head>
 
 <body>
-    <!--PreLoader-->
+	
+	<!--PreLoader-->
     <div class="loader">
         <div class="loader-inner">
             <div class="circle"></div>
         </div>
     </div>
     <!--PreLoader Ends-->
-
-    <!-- header -->
-    <div class="top-header-area" id="sticker">
+	
+	<!-- header -->
+	<div class="top-header-area" id="sticker">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-sm-12 text-center">
@@ -62,11 +64,10 @@
                         <!-- menu start -->
                         <nav class="main-menu">
                             <ul>
-								<li class="{% if request.path == '/' %}current-list-item{% endif %}"><a href="{% url 'home' %}">Home</a></li>
+                                <li class="{% if request.path == '/' %}current-list-item{% endif %}"><a href="{% url 'home' %}">Home</a></li>
                                 <li class="{% if request.path == '/about/' %}current-list-item{% endif %}"><a href="{% url 'about' %}">About</a></li>
                                 <li class="{% if request.path == '/contact/' %}current-list-item{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
                                 <li class="{% if request.path == '/shop/' %}current-list-item{% endif %}"><a href="{% url 'shop' %}">Shop</a></li>
-                                </li>
                                 <li>
                                     <div class="header-icons">
                                         <a class="shopping-cart" href="{% url 'cart' %}">
@@ -86,7 +87,7 @@
                                                 {% endwith %}
                                             {% endif %}
                                         </a>
-                                    </div> 
+                                    </div>                                    
                                 </li>
                                 <li>
                                     <div class="header-icons">
@@ -115,42 +116,24 @@
                                 </li>
                             </ul>
                         </nav>
-						<div class="mobile-menu"></div>
+                        <div class="mobile-menu"></div>
                         <!-- menu end -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- end header -->
+	<!-- end header -->
 
-	<!-- search area -->
-	<div class="search-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<span class="close-btn"><i class="fas fa-window-close"></i></span>
-					<div class="search-bar">
-						<div class="search-bar-tablecell">
-							<h3>Search For:</h3>
-							<input type="text" placeholder="Keywords">
-							<button type="submit">Search <i class="fas fa-search"></i></button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end search arewa -->
-	
+
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Fresh and Organic</p>
-						<h1>Check Out Product</h1>
+						<p>See more Details</p>
+						<h1>About Product</h1>
 					</div>
 				</div>
 			</div>
@@ -158,118 +141,115 @@
 	</div>
 	<!-- end breadcrumb section -->
 
-
-
-<!-- checkout section -->
-		<div class="checkout-section mt-150 mb-150">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8">
-						<div class="checkout-accordion-wrap">
-							<div class="accordion" id="accordionExample">
-								<div class="card single-accordion">
-									<div class="card-header" id="headingOne">
-										<h5 class="mb-0">
-											<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-												Shipping Address
-											</button>
-										</h5>
-									</div>
-									<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-										<div class="card-body">
-											<!-- Billing Address Form -->
-											<div class="billing-address-form">
-												<form method="POST" action="{% url 'place_order' %}">
-													{% csrf_token %}
-													<p><input type="text" name="name" placeholder="Name" required></p>
-													<p><input type="email" name="email" placeholder="Email" required></p>
-													<p><input type="text" name="billing_address" placeholder="Address" required></p>
-													<p><input type="tel" name="phone" placeholder="Phone" required></p>
-													<p><textarea name="note" id="bill" cols="30" rows="10" placeholder="Your Message"></textarea></p>
-													<input type="hidden" name="cart_id" value="{{ cart.id }}">
-													<button type="submit" class="btn btn-success p-3 mt-3 font-weight-bolder fs-1">Proceed to payment </button>
-												</form>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="order-details-wrap">
-							<table class="order-details">
-								<thead>
-									<tr>
-										<th>Your order Details</th>
-										<th>Price</th>
-									</tr>
-								</thead>
-								<tbody class="order-details-body">
-									<tr>
-										<td>Product</td>
-										<td>Total</td>
-									</tr>
-									{% for item in items %}
-									<tr class="table-body-row">
-										<td class="product-name">{{ item.product.title }}</td>
-										<td class="product-total">${{ item.get_total_price|floatformat:2 }}</td>
-									</tr>
-									{% endfor %}
-								</tbody>
-								<tbody>
-									<tr class="total-data">
-										<td><strong>Subtotal: </strong></td>
-										<td>${{ subtotal|floatformat:2 }}</td>
-									</tr>
-									<tr class="total-data">
-										<td><strong>Shipping: </strong></td>
-										<td>${{ shipping_cost|floatformat:2 }}</td>
-									</tr>
-									<tr class="total-data">
-										<td><strong>Total: </strong></td>
-										<td>${{ total|floatformat:2 }}</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- end check out section -->
-
-	<!-- logo carousel -->
-	<div class="logo-carousel-section">
+	<!-- single product -->
+	<div class="single-product mt-150 mb-150">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
-					<div class="logo-carousel-inner">
-						<div class="single-logo-item">
-							<img src="assets/img/company-logos/1.png" alt="">
+				<div class="col-md-5">
+					<div class="single-product-img">
+						<img src="{{product.image.url}}" alt="">
+					</div>
+				</div>
+				<div class="col-md-7">
+					<div class="single-product-content">
+						<h3>{{product.title}}</h3>
+						<p class="single-product-pricing"><span>Per Kg</span> ${{product.price}}</p>
+						<p>{{product.description}}</p>
+						<div class="single-product-form">
+							<a href="{% url "add_to_cart" product.id%}?next={{ request.path }}" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+							<p><strong>Categories: </strong>{{product.category.category_name}}</p>
 						</div>
-						<div class="single-logo-item">
-							<img src="assets/img/company-logos/2.png" alt="">
-						</div>
-						<div class="single-logo-item">
-							<img src="assets/img/company-logos/3.png" alt="">
-						</div>
-						<div class="single-logo-item">
-							<img src="assets/img/company-logos/4.png" alt="">
-						</div>
-						<div class="single-logo-item">
-							<img src="assets/img/company-logos/5.png" alt="">
-						</div>
+						<h4>Share:</h4>
+						<ul class="product-share">
+							<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href=""><i class="fab fa-twitter"></i></a></li>
+							<li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+							<li><a href=""><i class="fab fa-linkedin"></i></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- end logo carousel -->
+	<!-- end single product -->
 
-	<!-- footer -->
-	<div class="footer-area">
+	<!-- more products -->
+	{% comment %} <div class="more-products mb-150">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+					<div class="section-title">	
+						<h3><span class="orange-text">Related</span> Products</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="single-product-item">
+						<div class="product-image">
+							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+						</div>
+						<h3>Strawberry</h3>
+						<p class="product-price"><span>Per Kg</span> 85$ </p>
+						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="single-product-item">
+						<div class="product-image">
+							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
+						</div>
+						<h3>Berry</h3>
+						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">
+					<div class="single-product-item">
+						<div class="product-image">
+							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
+						</div>
+						<h3>Lemon</h3>
+						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> {% endcomment %}
+	<!-- end more products -->
+
+	    <!-- logo carousel -->
+    <div class="logo-carousel-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="logo-carousel-inner">
+                        <div class="single-logo-item">
+                            <img src="{% static " assets/img/company-logos/1.png" %}" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="{% static " assets/img/company-logos/2.png" %}" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="{% static " assets/img/company-logos/3.png" %}" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="{% static " assets/img/company-logos/4.png" %}" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="{% static " assets/img/company-logos/5.png" %}" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end logo carousel -->
+
+    <!-- footer -->
+    <div class="footer-area">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6">
@@ -338,53 +318,31 @@
             </div>
         </div>
     </div>
-	<!-- end footer -->
-	
-	<!-- copyright -->
-	<div class="copyright">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-12">
-					<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.<br>
-						Distributed By - <a href="https://themewagon.com/">Themewagon</a>
-					</p>
-				</div>
-				<div class="col-lg-6 text-right col-md-12">
-					<div class="social-icons">
-						<ul>
-							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end copyright -->
-	
-	<!-- jquery -->
-	<script src="{% static "assets/js/jquery-1.11.3.min.js" %}"></script>
-	<!-- bootstrap -->
-	<script src="{% static "assets/bootstrap/js/bootstrap.min.js" %}"></script>
-	<!-- count down -->
-	<script src="{% static "assets/js/jquery.countdown.js" %}"></script>
-	<!-- isotope -->
-	<script src="{% static "assets/js/jquery.isotope-3.0.6.min.js" %}"></script>
-	<!-- waypoints -->
-	<script src="{% static "assets/js/waypoints.js" %}"></script>
-	<!-- owl carousel -->
-	<script src="{% static "assets/js/owl.carousel.min.js" %}"></script>
-	<!-- magnific popup -->
-	<script src="{% static "assets/js/jquery.magnific-popup.min.js" %}"></script>
-	<!-- mean menu -->
-	<script src="{% static "assets/js/jquery.meanmenu.min.js" %}"></script>
-	<!-- sticker js -->
-	<script src="{% static "assets/js/sticker.js" %}"></script>
-	<!-- main js -->
-	<script src="{% static "assets/js/main.js" %}"></script>
+    <!-- end copyright -->
+
+    <!-- jquery -->
+    <script src="{% static 'assets/js/jquery-1.11.3.min.js' %}"></script>
+    <!-- bootstrap -->
+    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
+    <!-- count down -->
+    <script src="{% static 'assets/js/jquery.countdown.js' %}"></script>
+    <!-- isotope -->
+    <script src="{% static 'assets/js/jquery.isotope-3.0.6.min.js' %}"></script>
+    <!-- waypoints -->
+    <script src="{% static 'assets/js/waypoints.js' %}"></script>
+    <!-- owl carousel -->
+    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <!-- magnific popup -->
+    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <!-- mean menu -->
+    <script src="{% static 'assets/js/jquery.meanmenu.min.js' %}"></script>
+    <!-- sticker js -->
+    <script src="{% static 'assets/js/sticker.js' %}"></script>
+    <!-- main js -->
+    <script src="{% static 'assets/js/main.js' %}"></script>
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 </body>
 </html>
